--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Projects from "../components/Projects.astro";
 import Experience from "../components/Experience.astro";
 import Education from "../components/Education.astro";
 import Footer from "../components/Footer.astro";
+import Work from "../components/Work.astro";
 import { siteConfig } from "../config";
 import "../styles/global.css";
 ---
@@ -30,6 +31,7 @@ import "../styles/global.css";
     <section>
       <Hero />
       <About />
+      <Work />
       <Projects />
       <Experience />
       <Education />
